--- a/style.css
+++ b/style.css
@@ -12,13 +12,28 @@ body {
 	background-size: cover;
 }
 
-h1 {
+/* Navbar */
+/* Add some basic styling to the navbar */
+.navbar {
+  padding-bottom: 4px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  border-bottom: 2px solid white;
+}
+
+
+/*-----------------*/
+
+h2 {
 	font-family: "Montserrat", sans-serif;
 	font-weight: bold;
 }
 
+
+
 #landing {
-	height: 80vh;
+	height: 95vh;
 	/* center the content vertically using flexbox */
 	display: flex;
 	flex-direction: column;
@@ -26,18 +41,42 @@ h1 {
 	align-items: center;
 }
 
-#profile {
-	height: 250px;
-	width: 250px;
-	border-radius: 50%;
+#groupPhoto {
+	width: 500px;
+
+	/* optional */
+	border: 3px solid white;
+}
+
+p{
+	text-align: center;
+	width: 500px;
+}
+.members{
+	text-align: ;
+	margin-top: 5px;
+	height: 200px;
+	width: 500px;
+	border: 1px solid white;
+	letter-spacing: 5px;
+
+	/* optional */
+	overflow: auto; 
+	/* specifically used to enable scroll functionality for an element when its content exceeds the height of the container. */
+
+}
+
+.names{
+	font-weight: bold;
+
 }
 
 button {
 	background-color: lightpink;
 	color: black;
 	border: 3px black solid;
-	padding: 5px;
-	margin:10px;
+	padding: 10px;
+	margin:20px;
 	box-shadow: 5px 5px;
 }
 
